--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Assgnment 01</title>
 </head>
 <body>
-    <center><img src="./Duck.jpeg" alt="">
+    <center><img src="./Duck.JPEG" alt="">
     <h1>BLACK GOOSE BISTRO</h1></center>
     <HR color="skyblue" size="04" width="1200"></HR>
     <blockquote><h3 style="color: red;">The Restaurant</h2>
